--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -4,3 +4,6 @@ apt_packages = ["python3", "python3-pip"]
 
 [phases.start]
 commands = ["python manage.py migrate", "python manage.py runserver 0.0.0.0:$PORT"]
+
+[phases.start]
+commands = ["python manage.py migrate", "python manage.py runserver 0.0.0.0:$PORT"]
