--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,10 +2,13 @@
 apt_packages = ["python3", "python3-pip"]
 
 [phases.install]
-commands = ["pip install -r requirements.txt"]
+commands = ["python3 -m pip install --upgrade pip", "pip3 install -r requirements.txt"]
+
+[phases.build]
+commands = ["python3 manage.py migrate"]
 
 [phases.start]
-commands = ["python manage.py migrate", "python manage.py runserver 0.0.0.0:${PORT}"]
+commands = ["python3 manage.py runserver 0.0.0.0:${PORT}"]
 
 [languages.python]
-version = "3.9"  # Or your Python version
+version = "3.12"
