--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,5 +1,5 @@
 [phases.setup]
-apt_packages = ["python3", "python3-pip"]
+apt_packages = ["python", "python-pip"]
 
 [phases.install]
 commands = ["python3 -m pip install --upgrade pip", "python3 -m pip install -r requirements.txt"]
