--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,13 +2,13 @@
 apt_packages = ["python", "python-pip"]
 
 [phases.install]
-commands = ["python3 -m pip install --upgrade pip", "python3 -m pip install -r requirements.txt"]
+commands = ["python -m pip install --upgrade pip", "python -m pip install -r requirements.txt"]
 
 [phases.build]
-commands = ["python3 manage.py migrate"]
+commands = ["python manage.py migrate"]
 
 [phases.start]
-commands = ["python3 manage.py runserver 0.0.0.0:${PORT}"]
+commands = ["python manage.py runserver 0.0.0.0:${PORT}"]
 
 [languages.python]
 version = "3.9"  # Or specify the exact Python version your project requires
