--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,14 +1,14 @@
+[languages.python]
+version = "3.9"  # Specify the version of Python you're using
+
 [phases.setup]
-apt_packages = ["python", "python-pip"]
+apt_packages = ["python3", "python3-pip"]
 
 [phases.install]
-commands = ["python -m pip install --upgrade pip", "python -m pip install -r requirements.txt"]
+commands = ["python3 -m pip install --upgrade pip", "python3 -m pip install -r requirements.txt"]
 
 [phases.build]
-commands = ["python manage.py migrate"]
+commands = ["python3 manage.py migrate"]
 
 [phases.start]
-commands = ["python manage.py runserver 0.0.0.0:${PORT}"]
-
-[languages.python]
-version = "3.9"  # Or specify the exact Python version your project requires
+commands = ["python3 manage.py runserver 0.0.0.0:${PORT}"]
